[gd_scene load_steps=2 format=3 uid="uid://dlc4h675cmxn"]

[ext_resource type="Script" uid="uid://8l7i8au0w0st" path="res://skill_system_test/objects/buff_status.gd" id="1_j6s1x"]

[node name="BuffStatus" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 50.0
offset_bottom = 50.0
script = ExtResource("1_j6s1x")

[node name="BuffNameLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 30.0
grow_horizontal = 2
text = "眩晕"
horizontal_alignment = 1
clip_text = true

[node name="BuffStackLabel" type="Label" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -23.0
offset_right = 16.0
grow_vertical = 0
text = "5"
horizontal_alignment = 1

[node name="BuffCdLabel" type="Label" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -10.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
text = "5"
horizontal_alignment = 1
